# fire-data

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: testing.yaml
fire_data/: __init__.py  api_data.py
tests/: conftest.py  test_api_data.py
